@@ -1,4 +1,4 @@
-(test-begin "libs" 76)
+(test-begin "libs" 126)
 
 (import (srfi :2 and-let*))
 
@@ -282,5 +282,82 @@
       (n in (stream-from 2))))
 (test-equal '(1 8 27 64 125 216 343 512 729 1000)
             (stream->list 10 (stream-ref power-table 1)))
+
+(test-begin "rnrs-lists" 50)
+
+(import (rnrs lists))
+
+(test-equal 4 (find even? '(3 1 4 1 5 9)))
+(test-equal #f (find even? '(3 1 5 1 5 9)))
+(test-equal #f (for-all even? '(3 1 4 1 5 9)))
+(test-equal #f (for-all even? '(3 1 4 1 5 9 . 2)))
+(test-equal #t (for-all even? '(2 4 14)))
+(test-error (for-all even? '(2 4 14 . 9)))
+(test-equal 14 (for-all (lambda (n) (and (even? n) n)) '(2 4 14)))
+(test-equal #t (for-all < '(1 2 3) '(2 3 4)))
+(test-equal #f (for-all < '(1 2 4) '(2 3 4)))
+(test-equal #t (exists even?  '(3 1 4 1 5 9)))
+(test-equal #f (exists even?  '(3 1 1 5 9)))
+(test-error (exists even?  '(3 1 1 5 9 . 2)))
+(test-equal 2 (exists (lambda (n) (and (even? n) n)) '(2 1 4 14)))
+(test-equal #t (exists < '(1 2 4) '(2 3 4)))
+(test-equal #f (exists > '(1 2 3) '(2 3 4)))
+(test-equal '(4 2 6) (filter even? '(3 1 4 1 5 9 2 6)))
+(test-equal '((4 2 6) (3 1 1 5 9))
+            (call-with-values
+                (lambda ()
+                  (partition even? '(3 1 4 1 5 9 2 6)))
+              (lambda (evens odds)
+                (list evens odds))))
+(test-equal 15 (fold-left + 0 '(1 2 3 4 5)))
+(test-equal '(5 4 3 2 1) (fold-left (lambda (a e) (cons e a)) '()
+                                    '(1 2 3 4 5)))
+(test-equal 7 (fold-left (lambda (count x)
+                           (if (odd? x) (+ count 1) count))
+                         0 '(3 1 4 1 5 9 2 6 5 3)))
+(test-equal 7 (fold-left (lambda (max-len s)
+                           (max max-len (string-length s)))
+                         0 '("longest" "long" "longer")))
+(test-equal '((((q) . a) . b) . c) (fold-left cons '(q) '(a b c)))
+(test-equal 21 (fold-left + 0 '(1 2 3) '(4 5 6)))
+(test-equal 15 (fold-right + 0 '(1 2 3 4 5)))
+(test-equal '(1 2 3 4 5) (fold-right cons '() '(1 2 3 4 5)))
+(test-equal '(3 1 1 5 9 5) (fold-right (lambda (x l)
+                                         (if (odd? x) (cons x l) l))
+                                       '() '(3 1 4 1 5 9 2 6 5)))
+(test-equal '(a b c q) (fold-right cons '(q) '(a b c)))
+(test-equal 21 (fold-right + 0 '(1 2 3) '(4 5 6)))
+(test-equal '(3 1 1 5 9 5) (remp even? '(3 1 4 1 5 9 2 6 5)))
+(test-equal '(3 4 5 9 2 6 5) (remove 1 '(3 1 4 1 5 9 2 6 5)))
+(test-equal '(3 4 5 9 2 6 5) (remv 1 '(3 1 4 1 5 9 2 6 5)))
+(test-equal '(bar baz) (remq 'foo '(bar foo baz)))
+(test-equal '(4 1 5 9 2 6 5) (memp even? '(3 1 4 1 5 9 2 6 5)))
+(test-equal '(a b c) (memq 'a '(a b c)))
+(test-equal '(b c) (memq 'b '(a b c)))
+(test-equal #f (memq 'a '(b c d)))
+(test-equal #f (memq (list 'a) '(b (a) c)))
+(test-equal '((a) c) (member (list 'a) '(b (a) c)))
+;; (test-equal '(101 102) (memq 101 '(100 101 102))) ; result unspecified
+(test-equal '(101 102) (memv 101 '(100 101 102)))
+
+(define d '((3 a) (1 b) (4 c)))
+(test-equal '(4 c) (assp even? d))
+(test-equal '(3 a) (assp odd? d))
+
+(define e '((a 1) (b 2) (c 3)))
+(test-equal '(a 1) (assq 'a e))
+(test-equal '(b 2) (assq 'b e))
+(test-equal #f (assq 'd e))
+
+(test-equal #f (assq (list 'a) '(((a)) ((b)) ((c)))))
+(test-equal '((a)) (assoc (list 'a) '(((a)) ((b)) ((c)))))
+;; (test-equal '(5 7) (assq 5 '((2 3) (5 7) (11 13)))) ; result unspecified
+(test-equal '(5 7) (assv 5 '((2 3) (5 7) (11 13))))
+
+(test-equal '(1 2 3 4 5) (cons* 1 2 '(3 4 5)))
+(test-equal '(1 2 . 3) (cons* 1 2 3))
+(test-equal 1 (cons* 1))
+
+(test-end "rnrs-lists")
 
 (test-end)
